# fusiondl

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: global_vars.py
src/config/: conf_parser.py
src/core/: hashing.py  loader.py  processing.py  trainercore.py
src/core/data/: gadata.py  get_mdsplus_data.py  signals.py
src/core/primitives/: shot.py  signal.py
src/models/: targets.py
src/models/tensorflow/: builder.py  custom_loss.py  input_1D.py  targets.py
src/trainers/tensorflow2/: trainer.py
src/utils/: hashing.py
src/utils/core/primitives/: machine.py  signal.py
