[metadata]
description-file = README.md

# flake8 does not yet support pyproject.toml
# https://gitlab.com/pycqa/flake8/issues/428
[flake8]
max-line-length = 88
# B950= pragmatic equivalent of pycodestyle's E501: it considers "max-line-length" but only triggers when the value has been exceeded by more than 10%.
# select = C,E,F,W,B,B950
extend-ignore = E203,E722,E731  # E722 do not use bare exception, E731 use def, not lambda
#
# ignore =
#        E121,
#        E123,
#        E126,
#        E203, # E203 whitespace before ':' (not PEP8 compliant)
#        E226,
#        E241,
#        E704,
#        E731,
#        W503  # (line break before binary operator; also suppressed in Athena++ and not PEP8 compliant)
